--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,16 @@
     max-width: 80%;
 }
 
+.muestra-game {
+    height: 15em;
+    width: 15em;
+}
+
+.show-game {
+    float: left;
+    padding: 10px;
+}
+
 #myNavbar {
     /*background: white;*/
 }
@@ -106,4 +116,96 @@ input[type="date"], input[type="number"], select {
 .sub-icon {
     height: 15px;
     width: 15px;
+}
+
+/* PARA LA VENTANA MODAL*/
+
+.popup-contenedor {
+    position: relative;
+    margin:5% auto;
+    background-color: #f2f2f2;
+    color:#333;
+    border-radius: 3px;
+    width:50%;
+}
+
+.desc, .user_name {
+    font-weight: bold;
+}
+
+.user_name {
+    text-align: left;
+}
+
+.starts {
+    text-align: right;
+}
+
+#bttnComprar {
+    height: 30px;
+}
+
+.comentarios {
+    width: 100%;
+}
+
+#descFecha {
+    font-size: 10px;
+    text-align: right;
+}
+
+.descCmnt {
+    text-align: left;
+}
+
+#cmntTable {
+    width: 100%;
+    background: #d9d9d9
+}
+
+#btnComentar {
+    width: 120px;
+    height: 30px;
+}
+
+.stars {
+    height: 20px;
+    width: 20px;
+}
+
+.contornoCmnt {
+    border: 1px solid lightslategray
+}
+
+#Comentario {
+    background: #f2f2f2;
+}
+
+textarea {
+    width: 98%;
+    height: 70px
+}
+
+#allCmnts {
+    height: 120px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.todosComentarios {
+    background: #f2f2f2;
+}
+
+#btnCerrar {
+    position: absolute;
+    top:3px;
+    right:3px;
+    padding: 5px 8px;
+    font-size: 20px;
+    text-decoration: none;
+    line-height: 1;
+    background-color: #f2f2f2;
+    color:black;
+    border: 0px;
+    border-radius: 40px;
 }
