Creacion de la factura por medio de compra de juego

--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@
 #btn-sold {
     width: 15em;
     padding: 8px;
-    color: lightslategray;
+    color: rgb(76, 88, 99);
     font-weight: bold;
     background: lightgray;
 }
