--- a/css/css_factura.css
+++ b/css/css_factura.css
@@ -11,6 +11,7 @@ and open the template in the editor.
 .headers {
     font-weight: bold;
     font-size: 13px;
+    text-align: center;
 }
 
 table[id="fullFactura"] {
